Update layout with message resource properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,11 +1,5 @@
-login.title=\u0110\u0103ng nh\u1EADp
-sys.version=v0.1.0 (2017.10)
-sys.trademark=\u00A9 C\u00F4ng ty TNHH  Tu\u1EC7 An
-login.block_title=C\u01A1 kh\u00ED Tu\u1EC7 An
-home.title=Trang ch\u1EE7
-login.subject=\u0110\u0103ng nh\u1EADp h\u1EC7 th\u1ED1ng
-login.forgot_password=Qu\u00EAn m\u1EADt kh\u1EA9u?
-login.email=Email ID
-login.password=M\u1EADt kh\u1EA9u
-login.remember=Ghi nh\u1EDB \u0111\u0103ng nh\u1EADp
-login.submit=\u0110\u0103ng nh\u1EADp
+
+login.empty   = Please enter your login details.
+login.failure = Invalid email or password.
+
+logout.msg = You have been logged out successfully.
