--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,8 @@
-
 login.empty   = Please enter your login details.
 login.failure = Invalid email or password.
 
 logout.msg = You have been logged out successfully.
+
+#
+file.empty = Please select a file.
+file.maxsize = {0} exceeds the maximum size of {1} Kb.
